--- a/committee1.html
+++ b/committee1.html
@@ -87,7 +87,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Jonathan.png" onmouseover="this.src='Assets/Committee/Shh/Jonathan.png'" onmouseout="this.src='Assets/Committee/Cropped/Jonathan.png'" />
 		      <h3>Just Me</h3>
-		      <h4>The Only Normal One</h4>
+		      <h4>Kung Fu Master</h4>
 		      <p>UCLA</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
