--- a/index.html
+++ b/index.html
@@ -36,17 +36,17 @@
 				div.s{
 					margin: 0; padding: 0; height: 200px;
 				}
-				img.network{
-					margin-top: 50px;
-				}
 				img.welcome{
 					height: 180px;
 				}
 				div.network{
+					margin-top: -40px;
 					height: 250px;
+					margin-bottom: -40px;
 				}
 				div.welcome{
 					height: 240px;
+					margin: 50px 0 -10px 0;
 				}
 				div.background{
 					margin: -2px 0 0 0; padding: 0;
