--- a/index.html
+++ b/index.html
@@ -96,6 +96,39 @@
 
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
+
+
+	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
+	<div class="video">
+	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
+			<source src="LogoAnimation.mp4" type="video/mp4"></source>
+		</video>
+	</div>
+	<div id="backup-photo">
+
+	</div>
+
+
+	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
+
+
+
+	<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
+	<div class="video">
+	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
+			<source src="LogoAnimation.mp4" type="video/mp4"></source>
+		</video>
+	</div>
+	<div id="backup-photo">
+
+	</div>
+
+
+	<!-- ///////////////////// ANIMATION END //////////////////////// -->
+
+
+
+
 	<!-- ///////////////////// SECTION -1 BEGIN  //////////////////////// -->
 	<div class="section-1 body">
 		
