--- a/index.html
+++ b/index.html
@@ -99,14 +99,6 @@
 
 
 	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
-	<div class="video">
-	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
-			<source src="LogoAnimation.mp4" type="video/mp4"></source>
-		</video>
-	</div>
-	<div id="backup-photo">
-
-	</div>
 
 
 	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
@@ -115,7 +107,7 @@
 
 	<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
 	<div class="video">
-	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
+	  	<video muted="" id="video" autoplay="autoplay" >
 			<source src="LogoAnimation.mp4" type="video/mp4"></source>
 		</video>
 	</div>
