--- a/index.html
+++ b/index.html
@@ -82,7 +82,6 @@
 	    <div class="collapse navbar-collapse" id="myNavbar">
 		      <ul class="nav navbar-nav navbar-right">
 		        <li><a href="index.html">ABOUT</a></li>
-		        <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
@@ -97,17 +96,9 @@
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
 
-
-	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
-
-
-	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
-
-
-
 	<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
 	<div class="video">
-	  	<video muted="" id="video" autoplay="autoplay" >
+	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
 			<source src="LogoAnimation.mp4" type="video/mp4"></source>
 		</video>
 	</div>
@@ -119,13 +110,12 @@
 	<!-- ///////////////////// ANIMATION END //////////////////////// -->
 
 
-
-
-	<!-- ///////////////////// SECTION -1 BEGIN  //////////////////////// -->
-	<div class="section-1 body">
-		
+	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
+	<div class="overlay">
+		<h2>November 3-5</h2>
 	</div>
-	<!-- ///////////////////// SECTION -1 END  //////////////////////// -->
+	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
+
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
 	<style>div.line{height: 8px; width: 100%; background: white;}</style>
