--- a/documents.html
+++ b/documents.html
@@ -33,7 +33,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="myNavbar">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html">ABOUT</a></li>
+		        <li><a href="index.html">HOME</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
@@ -49,8 +49,34 @@
 
 	<body>
 	<div class="background">
-		<h1>applications</h1>
+	<!--
+		<div id="accordion" class="downloads-section">
+		    <div class="downloads-panel required">
+		      <a href="#codeofconduct" data-parent="#accordion" data-toggle="collapse">CODE OF CONDUCT</a>
+		          <a target="_blank" href="forms/FTC2016_Code_of_Conduct.pdf"><img align = "right" class="DL" src="Assets/Download.png" alt=DOWNLOAD_BUTTON /></a>
+		    </div>
+	    <div id="codeofconduct" class="collapse download-body">
+		    <p>
+		    The Board of Officers of the California-Nevada-Hawaii District of Circle K International hopes that every Circle K'er, participant, and guest will fully enjoy this Circle K event. The following Code of Conduct has been established to make this event as safe and enjoyable for all attendees and will be in effect during the entire event.
+		  	</p>
+
+		    <a target="_blank" href="forms/FTC2016_Code_of_Conduct.pdf" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .PDF</a>
+	    </div>
+	    <div class="downloads-panel required">
+	      <a href="#waiver" data-parent="#accordion" data-toggle="collapse">WAIVER</a>
+	      <a target="_blank" href="forms/FTC2016_Waiver.pdf"><img align = "right" class="DL" src="Assets/Download.png" alt=DOWNLOAD_BUTTON /></a>
+	    </div>
+	    <div id="waiver" class="collapse download-body">
+		    <p>
+		     Waiver required for attendees of FTC
+		    </p>
+	    	 <a target="_blank" href="forms/FTC2016_Waiver.pdf" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .PDF</a>
+	    </div>
+	  </div> <!--downloads section end -->
+
 		<h1>forms</h1>
+		<h1>applications</h1>
+		<h1>office hours</h1>
 
 		<div class="bottom"><img class="LS" src="Assets/Landscapes/3.png" alt=""></div>
 	</div>
