--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="myNavbar">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html">ABOUT</a></li>
+		        <li><a href="index.html">HOME</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
@@ -96,6 +96,7 @@
 	<!-- ///////////////////// NAVBAR END //////////////////////// -->
 
 
+	<div class="container">
 	<!-- ///////////////////// ANIMATION BEGIN //////////////////////// -->
 	<div class="video">
 	  	<video muted="" id="video" autoplay="autoplay" loop="loop">
@@ -106,12 +107,23 @@
 
 	</div>
 
-
 	<!-- ///////////////////// ANIMATION END //////////////////////// -->
 
 
 	<!-- ///////////////////// ANIMATION OVERLAY BEGIN //////////////////////// -->
+	<div class="details">
+		<h2>November 3-5, 2017</h2>
+		<h2>Sonora, CA</h2>	
+	</div>
 	<!-- ///////////////////// ANIMATION OVERLAY END //////////////////////// -->
+	</div>
+	<div class="filler"></div>
+
+	<!-- ///////////////////// ANNOUNCEMENTS BEGIN //////////////////////// -->
+	<div class="announcements">
+
+	</div>
+	<!-- ///////////////////// ANNOUNCEMENTS END //////////////////////// -->
 
 
 	<!-- ///////////////////// SECTION 0 BEGIN  //////////////////////// -->
