--- a/committee1.html
+++ b/committee1.html
@@ -45,7 +45,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html">ABOUT</a></li>
+		        <li><a href="index.html">HOME</a></li>
 		        <li><a href="announcements.html">ANNOUNCEMENTS</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
