--- a/FAQ.html
+++ b/FAQ.html
@@ -33,7 +33,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="myNavbar">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html">ABOUT</a></li>
+		        <li><a href="index.html">HOME</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
@@ -51,7 +51,7 @@
 		<div class="background">
 			<div class="attendee">
 				<h1>Attendee Info</h1>
-				<p class="attendee"> Please contact your club president for information on how to attend. Early registration, which costs ___ per member, is due on ___ and regular registration, which costs ___ per member, is due on ___. This year, each school will be allocated 20 attendee slots at FTC. The rest may be placed on a waitlist, but don't let that discourage you as we will let members off of the waitlist once all registration has been received! All attendees must fill out a Code of Conduct and a Waiver, available below.</p>
+				<p class="attendee"> Please contact your club president for information on how to attend. Early registration, which costs $145 per member, is due on October 13th and regular registration, which costs $170 per member, is due on October 20th. This year, each school will be guaranteed 20 attendee slots at FTC. The rest may be placed on a waitlist, but don't let that discourage you as we will let members off of the waitlist once all registration has been received! All attendees must fill out a Code of Conduct and a Waiver, available below.</p>
 			</div>
 			
 			<div class="FAQ container-fluid">
@@ -69,13 +69,13 @@
 						HOW MANY ATTENDEES CAN I BRING TO FTC?
 					</h2>
 					<p>
-						Each school will be allocated space for 20 attendees. Further members wishing to attend will be placed on a waitlist.
+						Each school is guaranteed 20 spots for members to attend. Further members wishing to attend will be placed on a waitlist.
 					</p>
 					<h2>
 						HOW MUCH DOES FTC COST?
 					</h2>
 					<p>
-						Early Registration, due by ______ will cost _____ per member. After that date, the registration price will rise to _____ per member. Registration closes on _____.	
+						Early Registration, due by October 13th, will cost $145 per member. After that date, the registration price will rise to $170 per member. Registration closes on October 20th.	
 					</p>
 					<h2>
 						ARE MEALS INCLUDED IN THE PRICE?
@@ -84,28 +84,16 @@
 						Yes, attendees will be provided three meals on Saturday and breakfast on Sunday.
 					</p>
 					<h2>
-						WHAT IF I GET LOST ON THE WAY UP TO FTC?
-					</h2>
-					<p>
-						You get attacked by clowns with chainsaws
-					</p>
-					<h2>
 						WHEN DO I NEED TO PAY DUES BY TO ATTEND FTC?
 					</h2>
 					<p>
 						Good question.
 					</p>
 					<h2>
-						WHEN SHOULD I ARRIVE AT FTC?
+						HOW CAN I GET INVOLVED AT FTC?
 					</h2>
 					<p>
-						idk
-					</p>
-					<h2>
-						WHAT DO WE DO IF WE ARRIVE EARLY?
-					</h2>
-					<p>
-						Idk I arrived late last year
+						There are plenty of ways to get involved! Volunteer to be an SAA, apply to be a team captain or workshop host, or apply to be a part of campfire skits & talent acts! Check out the documents tab to see all the opportunities available to you!
 					</p>
 				</div>
 				<div class="Q col-md-6 col-sm-12">
@@ -137,29 +125,15 @@
 						WILL I HAVE SIGNAL OR WI-FI?
 					</h2>
 					<p>
-						We in the middle of nowhere. But there's wifi thats bad right...?
+						You may or may not get signal up at Old Oak Ranch! Please prepare and pack accordingly.
 					</p>
 					<h2>
-						HOW DO I DEAL WITH DAYLIGHT SAVINGS TIME ENDING?
+						WHEN SHOULD I ARRIVE AT FTC?
 					</h2>
 					<p>
-						Be prepared to lose an hour of sleep Saturday night...?
-					</p>
-					<h2>
-						HOW CAN I BECOME A WORKSHOP HOST OR TEAM CAPTAIN?
-					</h2>
-					<p>
-						Check out the documents tab for the applications and their deadlines!
-					</p>
-					<h2>
-						HOW DOES REGISTRATION WORK?
-					</h2>
-					<p>
-						should we keep this question? above under attendee info it says to contact your president... can we assume that presidents know how to register or should we tell them here?
+						Registration for FTC will open at 5:30PM, and Opening Session will begin at 9:00PM!
 					</p>
 				</div>
-				
-				
 			</div>
 
 
