--- a/documents.html
+++ b/documents.html
@@ -50,12 +50,13 @@
 	<body>
 	<div class="background">
 		<h1>deadlines</h1>
-		
+
 		<h1>applications and forms</h1>
 		
 	<!-- ///////////////////// REQUIRED BEGIN //////////////////////// -->
 		<div id="accordion" class="downloads-section">
-		<p class="desc">ALL attendees must fill out the following two forms:</p>
+		<div class="pcontainer"><p class="desc">ALL attendees must fill out the following two forms:</p>
+</div>
 		    <div class="downloads-panel required">
 		      <a href="#codeofconduct" data-parent="#accordion" data-toggle="collapse">CODE OF CONDUCT</a>
 		          <a target="_blank" href="forms/FTC2016_Code_of_Conduct.pdf"><img align = "right" class="DL" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
@@ -84,7 +85,7 @@
 
 	<div id="accordion" class="downloads-section">
 	<br>
-	<p class="desc">Get involved at FTC! Find applications and forms for all facets of the event. Good luck on your submission, and keep on top of all deadlines!</p>
+	<div class="pcontainer">><p class="desc">Get involved at FTC! Find applications and forms for all facets of the event. Good luck on your submission, and keep on top of all deadlines!</p></div>
 	<!-- ///////////////////// PROGRAM AD //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#programad" data-parent="#accordion" data-toggle="collapse">PROGRAM AD FORM</a>
@@ -151,7 +152,7 @@
 	<!-- ///////////////////// WORKSHOPS KIWANIANS //////////////////////// -->
 	    <div class="downloads-panel long">
 	      <a href="#workshop-kiwanian-app" data-parent="#accordion" data-toggle="collapse">KIWANIAN AND ADVISORS WORKSHOP HOST APPLICATION</a>
-	          <a target="_blank" href="forms/FTC2016_Kiwanian_and_Advisors_Workshop_Host_Application.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	          <a target="_blank" href="forms/FTC2016_Kiwanian_and_Advisors_Workshop_Host_Application.docx"><img align = "right" src="Assets/Download.png" class="DL long" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="workshop-kiwanian-app" class="collapse download-body">
 	    <p>
@@ -308,7 +309,7 @@
 	<!-- ///////////////////// OPENING SLIDESHOW //////////////////////// -->
 	    <div class="downloads-panel long">
 	      <a href="#slideshow" data-parent="#accordion" data-toggle="collapse">OPENING SLIDESHOW SUBMISSION FORM</a>
-	          <a target="_blank" href="forms/FTC2016_Slideshows_Submissions_Form.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	          <a target="_blank" href="forms/FTC2016_Slideshows_Submissions_Form.docx"><img align = "right" src="Assets/Download.png" class="DL long1" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="slideshow" class="collapse download-body">
 	    <p>
