--- a/FAQ.html
+++ b/FAQ.html
@@ -96,7 +96,7 @@
 						There are plenty of ways to get involved! Volunteer to be an SAA, apply to be a team captain or workshop host, or apply to be a part of campfire skits & talent acts! Check out the documents tab to see all the opportunities available to you!
 					</p>
 				</div>
-				<div class="Q col-md-6 col-sm-12">
+				<div class="Q right col-md-6 col-sm-12">
 					<h2>
 						HOW MANY SAA'S DOES MY CLUB NEED?
 					</h2>
