--- a/documents.html
+++ b/documents.html
@@ -49,6 +49,7 @@
 
 	<body>
 	<div class="background">
+	<div class="padding">
 		<h1>deadlines</h1>
 
 		<h1>applications and forms</h1>
@@ -389,6 +390,7 @@
 
 		<h1>office hours</h1>
 
+		</div>
 		<div class="bottom"><img class="LS" src="Assets/Landscapes/3.png" alt=""></div>
 	</div>
 		
