--- a/FAQ.html
+++ b/FAQ.html
@@ -87,7 +87,7 @@
 						WHEN DO I NEED TO PAY DUES BY TO ATTEND FTC?
 					</h2>
 					<p>
-						Good question.
+						Make sure your all your attendees are dues-paid before FTC in order to attend!
 					</p>
 					<h2>
 						HOW CAN I GET INVOLVED AT FTC?
