--- a/committee.html
+++ b/committee.html
@@ -38,7 +38,7 @@
 	    <!-- Collect the nav links, forms, and other content for toggling -->
 	    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
 		      <ul class="nav navbar-nav navbar-right">
-		        <li><a href="index.html">ABOUT</a></li>
+		        <li><a href="index.html">HOME</a></li>
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
