--- a/documents.html
+++ b/documents.html
@@ -395,7 +395,10 @@
 	<!-- ///////////////////// DEADLINES START //////////////////////// -->
 	<br><br>
 		<h1>deadlines and office hours</h1>
-		<div class="calendars container-fluid">	
+		<div class="calendars container-fluid">
+		<div class="key">
+			<div class="keys key1"></div> <div class="keyans">= Deadline</div> <div class="keys key2"></div> <div class="keyans">= Office Hours	</div>
+		</div>	
 			<div class="September m">	
 					<div class="month"> 
 					  <ul class="calendar">
@@ -435,7 +438,7 @@
 					  <li>11</li>
 					  <li>12</li>
 					  <li>13</li>
-					  <li class="DL">14</li>
+					  <li class="DL">14 <p>This is a deadline</p></li>
 					  <li>15</li>
 					  <li>16</li>
 					  <li>17</li>
@@ -443,7 +446,7 @@
 					  <li>19</li>
 					  <li>20</li>
 					  <li>21</li>
-					  <li class="DL">22</li>
+					  <li class="DL">22 <p>This is a deadline</p></li>
 					  <li>23</li>
 					  <li>24</li>
 					  <li>25</li>
@@ -482,24 +485,24 @@
 					  <li>3</li>
 					  <li>4</li>
 					  <li>5</li>
-					  <li class="OH">6</li>
+					  <li class="OH">6 <p>This is an office hour</p></li>
 					  <li>7</li>
 					  <li>8</li>
 					  <li>9</li>
 					  <li>10</li>
-					  <li class="DL">11</li>
+					  <li class="DL">11 <p>This is a deadline</p></li>
 					  <li>12</li>
 					  <li>13</li>
 					  <li>14</li>
 					  <li>15</li>
-					  <li class="OH">16</li>
+					  <li class="OH">16 <p>This is an office hour</p></li>
 					  <li>17</li>
 					  <li>18</li>
 					  <li>19</li>
-					  <li class="DL">20</li>
+					  <li class="DL">20 <p>This is a deadline</p></li>
 					  <li>21</li>
-					  <li class="OH">22</li>
-					  <li class="DL">23</li>
+					  <li class="OH">22 <p>This is an office hour</p></li>
+					  <li class="DL">23 <p>This is a deadline</p></li>
 					  <li>24</li>
 					  <li>25</li>
 					  <li>26</li>
