--- a/documents.html
+++ b/documents.html
@@ -220,11 +220,11 @@
 	    </p>
 	    <p>
 	    <ul>
-		    <li>Application Process: Thursday, September 1st, 2017 - Sunday, October 9th, 2017</li>
-		    <li>Applicants shall submit Forms by Sunday, October 9th, 2017 @ 11:59 PM</li>
-		    <li>Applicants shall be contacted for an interview by Monday, October 10th, 2017</li>
-		    <li>Interviews will take place from Tuesday, October 11th, 2017 - Saturday, October 15th, 2017</li>
-		    <li>Team Captains will be announced on Monday, October 17th, 2017</li>
+		    <li>Application Process: Monday, September 4th, 2017 – Thursday, October 5th, 2017</li>
+		    <li>Applicants shall submit Forms by Thursday, October 5th, 2017 @ 11:59 PM</li>
+		    <li>Applicants shall be contacted for an interview by Saturday, October 7th, 2017</li>
+		    <li>Interviews will take place from Sunday, October 8th, 2017 - Wednesday, October 11th, 2017</li>
+		    <li>Team Captains will be announced on Monday, October 12th, 2017</li>
 	    </ul>
 	    </p>
 	      <a target="_blank" href="Forms/FTC2017_Team_Captain_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
@@ -276,18 +276,18 @@
 	  </p>
 	  <p>
 	  <ul>
-	    <li>Application Process: Thursday, September 1st, 2017 - Saturday, October 15th, 2017</li>
-	    <li>Applicants shall submit Forms by Saturday, October 15th, 2017 @ 10:00 PM</li>
-	    <li>Final contestants will be announced by Saturday, October 22nd, 2017</li>
+	    <li>Application Process: Thursday, September 1st, 2017 - Saturday, October 14th, 2017</li>
+	    <li>Applicants shall submit Forms by Saturday, October 14th, 2017 @ 10:00 PM</li>
+	    <li>Final contestants will be announced by Saturday, October 21nd, 2017</li>
 	  </ul>
 	  </p>
 	  <a target="_blank" href="Forms/FTC2017_Campfire_Skits_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
 	      
 	  </div>
-	<!-- ///////////////////// DJ //////////////////////// -->
+	<!-- ///////////////////// TALENT ACTS //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#talent-app" data-parent="#accordion" data-toggle="collapse">TALENT ACTS AUDITION FORM</a>
-	          <a target="_blank" href="Forms/FTC2017_Talent_Act_Application.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	          <a target="_blank" href="Forms/FTC2017_TalentActs_Application.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="talent-app" class="collapse download-body">
 
@@ -303,10 +303,10 @@
 		      Application Process: Thursday, September 1st, 2017 - Saturday, October 15th, 2017
 		    </li>
 		    <li>
-		      Applicants shall submit Forms by Saturday, October 15th, 2017 @ 10:00 PM
+		      Applicants shall submit Forms by Saturday, October 14th, 2017 @ 10:00 PM
 		    </li>
 		    <li>
-		      Final contestants will be announced by Saturday, October 22nd, 2017
+		      Final contestants will be announced by Saturday, October 21st, 2017
 		    </li>
 		  </ul>
 		</p>
