--- a/documents.html
+++ b/documents.html
@@ -393,7 +393,7 @@
 	    </div>
 	<!-- ///////////////////// OPENING SLIDESHOW //////////////////////// -->
 	    <div class="downloads-panel long">
-	      <a href="#slideshow" data-parent="#accordion" data-toggle="collapse">OPENING SLIDESHOW SUBMISSION FORM</a>
+	      <a href="#slideshow" data-parent="#accordion" data-toggle="collapse">OPENING SLIDESHOW SUBMISSIONS</a>
 	          <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing"><img align = "right" src="Assets/Link.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="slideshow" class="collapse download-body">
@@ -483,13 +483,13 @@
 		<div class="calendars container-fluid">
 		<div class="key">
 			<div class="container-fluid"><div class="keys key1"></div> <div class="keyans">= Deadline</div> <div class="keys key2"></div> <div class="keyans">= Office Hours</div></div>
-			<div class="DLOH">
-				<ul>
-					<li>All Deadlines are 11:59pm PST except for Campfire Skit and Talent Act Applications due at 10pm PST</li>
-					<li>All Office Hours are at night (pm, PST)</li>
-				</ul>
-			</div>
 		</div>	
+		<div class="DLOH">
+			<ul>
+				<li>All Deadlines are 11:59pm PST except for Campfire Skit and Talent Act Applications due at 10pm PST</li>
+				<li>All Office Hours are at night (pm, PST)</li>
+			</ul>
+		</div>
 			<div class="September m">	
 					<div class="month"> 
 					  <ul class="calendar">
@@ -519,7 +519,7 @@
 					  <li>1</li>
 					  <li>2</li>
 					  <li>3</li>
-					  <li>4</li>
+					  <li class="Other">4 <p>FTC LAUNCH!</p></li>
 					  <li class="OH">5 <p>5-6 Entertainment & Dining</p></li>
 					  <li class="OH">6 <p>8-9 Workshops</p></li>
 					  <li>7</li>
@@ -583,7 +583,7 @@
 					  <li>10</li>
 					  <li class="OH">11 <p>8-9 Workshops <br> 9-10 Campfire & Talent <br> 10-11 Registration</p></li>
 					  <li class="both"><div class="upper">12 <p>Early Reg. & Early SAA Reg. Due</p></div><div class="lower"><p>6-7 SAA <br> 9-10 Campfire</p></div></li>
-					  <li>13</li>
+					  <li class="DL">13 <p>Opening Slideshow Submissions Due</p></li>
 					  <li class="DL">14 <p>Campfire Skit and Talent Act Applications Due</p></li>
 					  <li>15</li>
 					  <li class="OH">16 <p>6-7 SAA <br> 8-9 Workshops</p></li>
@@ -599,13 +599,6 @@
 					  <li>26</li>
 					  <li>27</li>
 					  <li>28</li>
-					  <li>29</li>
-					  <li>30</li>
-					  <li>31</li>
-					  <li class="faded">1</li>
-					  <li class="faded">2</li>
-					  <li class="faded">3</li>
-					  <li class="faded">4</li>
 					</ul>
 				</div>
 			</div>
