--- a/documents.html
+++ b/documents.html
@@ -405,10 +405,10 @@
 	        <li>Visit the link above.</li>
 	        <li>Visit the Google Drive folder that the content is related to (i.e. your division).</li>
 	        <li>Upload the photos/videos in the correct folder by dragging them into the folder or using the “New” button.</li>
-	        <li>If you have any questions, comments, or concerns, feel free to contact ftc.mediachair@gmail.com</li>
+	        <li>If you have any questions, comments, or concerns, feel free to contact <strong>ftc.mediachair@gmail.com</strong></li>
 	    </ol>
 	    <p>
-	      If files are too large, please send them thru wetransfer.com to ftc.mediachair@gmail.com. <br>
+	      If files are too large, please send them thru <a class="lightblue" href="wetransfer.com">wetransfer.com</a> to ftc.mediachair@gmail.com. <br>
 		  Submissions are due <strong>Friday, October 13th, 2017 @ 11:59PM!</strong>
 	    </p>
 	    <a target="_blank" href="https://drive.google.com/drive/folders/0B3FBTrk2xv7QeENUbk9jVVJNQkU?usp=sharing" class="btn btn-default" id="download-button" target="_blank" role="button">GO TO DRIVE FOLDER</a>
