--- a/documents.html
+++ b/documents.html
@@ -93,7 +93,7 @@
 	<!-- ///////////////////// REGISTRATION GUIDE //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#registrationguide" data-parent="#accordion" data-toggle="collapse">REGISTRATION GUIDE</a>
-	          <a target="_blank" href="Forms/FTC2017_Registration_Guide.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	          <a target="_blank" href="Forms/FTC2017_Registration_Guide.pdf"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="registrationguide" class="collapse download-body">
 
@@ -110,7 +110,7 @@
 	      </ul>
 	      </p>
 
-	      <a target="_blank" href="Forms/FTC2017_Registration_Guide.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
+	      <a target="_blank" href="Forms/FTC2017_Registration_Guide.pdf" class="btn btn-default" id="download-button" target="_blank" role="button">VIEW .PDF</a>
 	      
 	    </div>
 		<a class="anchor" id="workshops-info"></a>
@@ -324,7 +324,7 @@
 		 In this packet, you will find helpful guidelines regarding your Campfire Skit and audition video, the application itself, as well as the judges' grading rubric.
 	    </p>
 	    
-	      <a target="_blank" href="Forms/FTC2017_Campfire_Skits_101_Manual.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a><br><br>
+	      <a target="_blank" href="Forms/FTC2017_Campfire_Skits_101_Manual.pdf" class="btn btn-default" id="download-button" target="_blank" role="button">VIEW .PDF</a><br><br>
 	    <p>
 	      <p><strong>Download the Campfire Skit APPLICATION here!</strong></p>
 	      <strong>Application Timeline</strong>
@@ -467,13 +467,13 @@
 	<!-- ///////////////////// DRIVING DIRECTIONS //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#drivers" data-parent="#accordion" data-toggle="collapse">DRIVING DIRECTIONS</a>
-	          <a href="Forms/FTC2017_Driving_Directions.docx"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
+	          <a href="Forms/FTC2017_Driving_Directions.pdf"><img align = "right" src="Assets/Download.png" class="DL" alt=DOWNLOAD_BUTTON /></a>
 	    </div>
 	    <div id="drivers" class="collapse download-body">
 	      <p>
 	        For all driving to FTC! There will be <strong>limited/no signal</strong> in the campsite area and along certain routes, so it is recommended that you pair these directions with a set of printed directions from Google Maps to get to Old Oak Ranch!
 	      </p>
-		<a target="_blank" href="Forms/FTC2017_Driving_Directions.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
+		<a target="_blank" href="Forms/FTC2017_Driving_Directions.pdf" class="btn btn-default" id="download-button" target="_blank" role="button">VIEW .PDF</a>
 	    </div>
 	</div>
 	
@@ -581,7 +581,7 @@
 					  <li>8</li>
 					  <li class="OH">9 <p>6-7 SAA, 8-9 Workshops</p></li>
 					  <li>10</li>
-					  <li class="OH">11 <p>8-9 Workshops <br> 9-10 Campfire & Talent <br> 10-11 Registration</p></li>
+					  <li class="OH">11 <p>8-9 Workshops <br> 9-10 Campfire & Talent <br> 10-11 Registr.</p></li>
 					  <li class="both"><div class="upper">12 <p>Early Reg. & Early SAA Reg. Due</p></div><div class="lower"><p>6-7 SAA <br> 9-10 Campfire</p></div></li>
 					  <li class="DL">13 <p>Opening Slideshow Submissions Due</p></li>
 					  <li class="DL">14 <p>Campfire Skit and Talent Act Applications Due</p></li>
