--- a/documents.html
+++ b/documents.html
@@ -405,7 +405,7 @@
 	        <li>Visit the link above.</li>
 	        <li>Visit the Google Drive folder that the content is related to (i.e. your division).</li>
 	        <li>Upload the photos/videos in the correct folder by dragging them into the folder or using the “New” button.</li>
-	        <li>If you have any questions, comments, or concerns, feel free to contact <strong>ftc.mediachair@gmail.com</strong></li>
+	        <li>If you have any questions, comments, or concerns, feel free to contact <a class="lightblue" href="mailto: ftc.mediachair@gmail.com"><strong>ftc.mediachair@gmail.com</strong></a></li>
 	    </ol>
 	    <p>
 	      If files are too large, please send them thru <a class="lightblue" href="wetransfer.com">wetransfer.com</a> to ftc.mediachair@gmail.com. <br>
