--- a/committee.html
+++ b/committee.html
@@ -16,6 +16,7 @@
 				margin-top: -23px;
 			}
 		</style>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
