--- a/FAQ.html
+++ b/FAQ.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="FAQ.css">
 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
