--- a/documents.html
+++ b/documents.html
@@ -10,6 +10,7 @@
 		<link rel="stylesheet" href="documents.css">
 
 		<meta name="DOWNLOADport" content="width=device-width, initial-scale=1">
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
