--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
 				}
 			}
 		</style>
+		<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	</head>
 
 	<!-- ///////////////////// NAVBAR START //////////////////////// -->
