--- a/documents.html
+++ b/documents.html
@@ -122,7 +122,7 @@
 	    </div>
 	    <div id="SAA-Forms" class="collapse download-body">
 	      <p>
-	        Clubs with at least 4 members in attendance are required to provide a minimum of 2 SAA volunteers. Each volunteer must sign up individually in order to be accounted for.
+	        Clubs with at least 4 members in attendance are required to provide a minimum of 2 SAA volunteers, plus one for every 4 additional attending members (see form for a more detailed explanation to determine the minimum number of SAAs that is required from each club).
 	      </p>
 	      <p>
 	        <strong>What is a Sergeant-At-Arms?</strong>
@@ -591,14 +591,14 @@
 					  <li class="OH">2 <p>6-7 SAA <br> 7-8 Campfire <br> 8-9 Workshops <br> 9-10 Team Act.</p></li>
 					  <li class="OH">3 <p>9-10 Registration</p></li>
 					  <li class="OH">4 <p>7-8 Workshops <br> 8-9 Campfire & Talent <br> 9-10 Team Act.</p></li>
-					  <li class="both"><div class="upper">5 <p>Team Captain Application Due</p></div><div class="lower"><p>6-7 SAA <br> 10-12 Team Act.</p></div></li>
+					  <li class="both"><div class="upper">5 <p>Team Captain App Due</p></div><div class="lower"><p>6-7 SAA <br> 10-12 Team Act.</p></div></li>
 					  <li class="DL">6 <p>Program Submissions Due</p></li>
 					  <li>7</li>
 					  <li>8</li>
 					  <li class="OH">9 <p>6-7 SAA, 8-9 Workshops</p></li>
 					  <li>10</li>
 					  <li class="OH">11 <p>8-9 Workshops <br> 9-10 Campfire & Talent <br> 10-11 Registr.</p></li>
-					  <li class="both"><div class="upper">12 <p>Early Registration Due</p></div><div class="lower"><p>6-7 SAA <br> 9-10 Campfire</p></div></li>
+					  <li class="both"><div class="upper">12 <p>Early Registr. Due</p></div><div class="lower"><p>6-7 SAA <br> 9-10 Campfire</p></div></li>
 					  <li class="DL">13 <p>Slideshow Submissions & Early SAA Reg. Due</p></li>
 					  <li class="DL">14 <p>Campfire Skit and Talent Act Applications Due</p></li>
 					  <li>15</li>
