--- a/committee.html
+++ b/committee.html
@@ -57,7 +57,7 @@
 
 	    <img src = "Assets/Committee/Cropped/Group.png" class="group">
 		<style>a.EE{color: #222;}</style>
-	    <div id="EE" style="position:absolute; height: 1px; width:1px;margin: 6.5% 50.1% 0 50%; top:0; left:0; font-size:1px; z-index:5;"><a class="EE" href="committee1.html" >a</a></div>
+	    <div id="EE" style="position:absolute; height: 1px; width:1px;margin: 6.5% 50.1% 0 50%; top:0; left:0; font-size:1px; z-index:5;"><a class="EE" href="" >a</a></div>
 
 	</div>
 
