--- a/committee1.html
+++ b/committee1.html
@@ -117,7 +117,7 @@
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
 		      <img class="img-circle img-responsive img-center" src="Assets/Committee/Cropped/Sandy.png" onmouseover="this.src='Assets/Committee/Shh/Sandy.png'" onmouseout="this.src='Assets/Committee/Cropped/Sandy.png'" />
 		      <h3>how do i die</h3>
-		      <h4>Fucking Savage</h4>
+		      <h4>Savage</h4>
 		      <p>UC Riverside</p>
 		    </div>
 		    <div class="col-lg-3 col-md-4 col-sm-6 text-center profile">
