--- a/documents.html
+++ b/documents.html
@@ -615,6 +615,13 @@
 					  <li>26</li>
 					  <li>27</li>
 					  <li>28</li>
+					  <li>29</li>
+					  <li>30</li>
+					  <li>31</li>
+					  <li class="faded">1</li>
+					  <li class="faded">2</li>
+					  <li class="faded Other">3 <p>FTC BEGINS!</p></li>
+					  <li class="faded">4</li>
 					</ul>
 				</div>
 			</div>
