--- a/documents.html
+++ b/documents.html
@@ -142,7 +142,8 @@
 	    <p>
 			<strong>SAA Office Hours:</strong>
 			<ul>
-				<li>Every Monday and Thursday from Mon, 9/11 through Mon, 10/16 | 6-7pm</li>
+				<li>Mon, 10/9 | 6-7pm</li>
+				<li>Fri, 10/13 (Early Deadline) | 10-11pm</li>
 				<li>Fri, 10/20 (Final Deadline) | 10pm-12am</li>
 			</ul>
 		</p>
@@ -210,12 +211,6 @@
 				<li>Wed, 9/6 | 8-9pm</li>
 				<li>Mon, 9/11 | 8-9pm</li>
 				<li>Wed, 9/13 | 8-9pm</li>
-				<li>Mon, 10/2 | 8-9pm</li>
-				<li>Wed, 10/4 | 7-8pm</li>
-				<li>Mon, 10/9 | 8-9pm</li>
-				<li>Wed, 10/11 | 8-9pm</li>
-				<li>Mon, 10/16 | 8-9pm</li>
-				<li>Wed, 10/18 | 8-9pm</li>
 			</ul>
 		</p>
 	      <a target="_blank" href="Forms/FTC2017_Workshops_Application.docx" class="btn btn-default" id="download-button" target="_blank" role="button">DOWNLOAD .DOCX</a>
@@ -336,8 +331,6 @@
 	  	<strong>Campfire Skits & Talent Acts Office Hours:</strong>
 	  	<ul>
 	  		<li>Wed, 9/13 | 9-10pm</li>
-	  		<li>Thu, 9/21 | 9-10pm</li>
-	  		<li>Thu, 9/28 | 9-10pm</li>
 	  		<li>Mon, 10/2 | 7-8pm</li>
 	  		<li>Wed, 10/4 | 8-9pm</li>
 	  		<li>Wed, 10/11 | 9-10pm</li>
@@ -377,8 +370,6 @@
 		  	<strong>Campfire Skits & Talent Acts Office Hours:</strong>
 		  	<ul>
 		  		<li>Wed, 9/13 | 9-10pm</li>
-		  		<li>Thu, 9/21 | 9-10pm</li>
-		  		<li>Thu, 9/28 | 9-10pm</li>
 		  		<li>Mon, 10/2 | 7-8pm</li>
 		  		<li>Wed, 10/4 | 8-9pm</li>
 		  		<li>Wed, 10/11 | 9-10pm</li>
@@ -542,24 +533,24 @@
 					  <li>8</li>
 					  <li>9</li>
 					  <li>10</li>
-					  <li class="OH">11 <p>6-7 SAA <br> 8-9 Workshops</p></li>
+					  <li class="OH">11 <p>8-9 Workshops</p></li>
 					  <li>12</li>
 					  <li class="OH">13 <p>8-9 Workshops <br> 9-10 Campfire & Talent</p></li>
-					  <li class="OH">14 <p>5-6 Entertainment & Dining <br> 6-7 SAA</p></li>
+					  <li class="OH">14 <p>5-6 Entertainment & Dining </p></li>
 					  <li>15</li>
 					  <li>16</li>
 					  <li class="DL">17 <p>Workshop Host Application Due</p></li>
-					  <li class="OH">18 <p>6-7 SAA</p></li>
+					  <li>18</li>
 					  <li class="DL">19 <p>Program Ad Form Due</p></li>
 					  <li>20</li>
-					  <li class="OH">21 <p>6-7 SAA <br> 9-10 Campfire & Talent</p></li>
+					  <li>21</li>
 					  <li>22</li>
 					  <li class="DL">23 <p>DJ Application Due</p></li>
 					  <li>24</li>
-					  <li class="OH">25 <p>6-7 SAA</p></li>
+					  <li>25</li>
 					  <li>26</li>
 					  <li>27</li>
-					  <li class="OH">28 <p>6-7 SAA <br> 9-10 Campfire & Talent</p></li>
+					  <li>28</li>
 					  <li>29</li>
 					  <li>30</li>
 
@@ -588,23 +579,23 @@
 
 					<ul class="calendar days">
 					  <li>1</li>
-					  <li class="OH">2 <p>6-7 SAA <br> 7-8 Campfire <br> 8-9 Workshops <br> 9-10 Team Act.</p></li>
+					  <li class="OH">2 <p>7-8 Campfire <br> 9-10 Team Act.</p></li>
 					  <li class="OH">3 <p>9-10 Registration</p></li>
-					  <li class="OH">4 <p>7-8 Workshops <br> 8-9 Campfire & Talent <br> 9-10 Team Act.</p></li>
-					  <li class="both"><div class="upper">5 <p>Team Captain App Due</p></div><div class="lower"><p>6-7 SAA <br> 10-12 Team Act.</p></div></li>
+					  <li class="OH">4 <p>8-9 Campfire & Talent <br> 9-10 Team Act.</p></li>
+					  <li class="both"><div class="upper">5 <p>Team Captain App Due</p></div><div class="lower">10-12 Team Act.</p></div></li>
 					  <li class="DL">6 <p>Program Submissions Due</p></li>
 					  <li>7</li>
 					  <li>8</li>
-					  <li class="OH">9 <p>6-7 SAA, 8-9 Workshops</p></li>
+					  <li class="OH">9 <p>6-7 SAA</p></li>
 					  <li>10</li>
-					  <li class="OH">11 <p>8-9 Workshops <br> 9-10 Campfire & Talent <br> 10-11 Registr.</p></li>
-					  <li class="both"><div class="upper">12 <p>Early Registr. Due</p></div><div class="lower"><p>6-7 SAA <br> 9-10 Campfire</p></div></li>
-					  <li class="DL">13 <p>Slideshow Submissions & Early SAA Reg. Due</p></li>
+					  <li class="OH">11 <p>9-10 Campfire & Talent <br> 10-11 Registr.</p></li>
+					  <li class="both"><div class="upper">12 <p>Early Registr. Due</p></div><div class="lower"><p>9-10 Campfire</p></div></li>
+					  <li class="both"><div class="upper">13 <p>Slideshow Submissions & Early SAA Reg. Due</p></div><div class="lower">10-11 SAA</div></li>
 					  <li class="DL">14 <p>Campfire Skit and Talent Act Applications Due</p></li>
 					  <li>15</li>
-					  <li class="OH">16 <p>6-7 SAA <br> 8-9 Workshops</p></li>
+					  <li>16</li>
 					  <li>17</li>
-					  <li class="OH">18 <p>8-9 Workshops <br> 9-10 Registration</p></li>
+					  <li class="OH">18 <p>9-10 Registration</p></li>
 					  <li class="DL">19 <p>Late Registration Due</p></li>
 					  <li class="both"><div class="upper">20 <p>Final SAA Reg. Due</p></div><div class="lower"><p>10-12 SAA</p></div></li>
 					  <li>21</li>
