--- a/documents.html
+++ b/documents.html
@@ -582,15 +582,15 @@
 					  <li class="OH">2 <p>7-8 Campfire <br> 9-10 Team Act.</p></li>
 					  <li class="OH">3 <p>9-10 Registration</p></li>
 					  <li class="OH">4 <p>8-9 Campfire & Talent <br> 9-10 Team Act.</p></li>
-					  <li class="both"><div class="upper">5 <p>Team Captain App Due</p></div><div class="lower">10-12 Team Act.</p></div></li>
+					  <li class="both"><div class="upper">5 <p>Team Captain App Due</p></div><div class="lower"><p>10-12 Team Act.</p></div></li>
 					  <li class="DL">6 <p>Program Submissions Due</p></li>
 					  <li>7</li>
 					  <li>8</li>
 					  <li class="OH">9 <p>6-7 SAA</p></li>
 					  <li>10</li>
 					  <li class="OH">11 <p>9-10 Campfire & Talent <br> 10-11 Registr.</p></li>
-					  <li class="both"><div class="upper">12 <p>Early Registr. Due</p></div><div class="lower"><p>9-10 Campfire</p></div></li>
-					  <li class="both"><div class="upper">13 <p>Slideshow Submissions & Early SAA Reg. Due</p></div><div class="lower">10-11 SAA</div></li>
+					  <li class="both"><div class="upper">12 <p>Early Registr. Due</p></div><div class="lower"><p>9-10 Campfire & Talent</p></div></li>
+					  <li class="both"><div class="upper">13 <p>Op. Slideshow & Early SAA Due</p></div><div class="lower"><p>10-11 SAA</p></div></li>
 					  <li class="DL">14 <p>Campfire Skit and Talent Act Applications Due</p></li>
 					  <li>15</li>
 					  <li>16</li>
