--- a/FAQ.html
+++ b/FAQ.html
@@ -38,7 +38,7 @@
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
-		        <li><a href="http://facebook.com">FB</a></li>
+		        <li><a href="https://www.facebook.com/events/118465608814440/">FB</a></li>
 		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
