--- a/committee.html
+++ b/committee.html
@@ -43,7 +43,7 @@
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
-		        <li><a href="">FB</a></li>
+		        <li><a href="https://www.facebook.com/events/118465608814440/">FB</a></li>
 		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li>
 		        
 		      </ul>
