--- a/documents.html
+++ b/documents.html
@@ -38,7 +38,7 @@
 		        <li><a href="documents.html">DOCUMENTS</a></li>
 		        <li><a href="FAQ.html">FAQ</a></li>
 		        <li><a href="committee.html">COMMITTEE</a></li>
-		        <li><a href="http://facebook.com">FB</a></li>
+		        <li><a href="https://www.facebook.com/events/118465608814440/">FB</a></li>
 		        <li class="cnh"><a href="http://www.cnhcirclek.org" target="_blank"> <img class="cnh" src="Assets/cnh-emblem.png" alt="CNH"> </a></li></li>
 		      </ul>
 		    </div><!-- /.navbar-collapse -->
@@ -90,7 +90,7 @@
 
 	<div id="accordion" class="downloads-section">
 	<br>
-	<div class="pcontainer">><p class="desc">Get involved at FTC! Find applications and Forms for all facets of the event. Good luck on your submission(s), and keep on top of all deadlines!</p></div>
+	<div class="pcontainer">><p class="desc">Get involved at FTC! Find applications and forms for all facets of the event. Good luck on your submission(s), and keep on top of all deadlines!</p></div>
 	<!-- ///////////////////// REGISTRATION GUIDE //////////////////////// -->
 	    <div class="downloads-panel">
 	      <a href="#registrationguide" data-parent="#accordion" data-toggle="collapse">REGISTRATION GUIDE</a>
