--- a/FAQ.html
+++ b/FAQ.html
@@ -52,7 +52,7 @@
 		<div class="background">
 			<div class="attendee">
 				<h1>Attendee Info</h1>
-				<p class="attendee"> Please contact your club president for information on how to attend. Early registration, which costs $145 per member, is due on October 12th and regular registration, which costs $170 per member, is due on October 19th. This year, each school will be guaranteed 20 attendee slots at FTC. The rest may be placed on a waitlist, but don't let that discourage you as we will let members off of the waitlist once all registration has been received! All attendees must fill out a Code of Conduct and a Waiver, available below.</p>
+				<p class="attendee"> Please contact your club president for information on how to attend. Early registration, which costs $145 per member, is due on October 12th and regular registration, which costs $170 per member, is due on October 19th. This year, each school will be guaranteed 20 attendee slots at FTC. The rest may be placed on a waitlist, but don't let that discourage you as we will let members off of the waitlist once all registration has been received! All attendees must fill out a Code of Conduct and a Waiver, available on the documents tab.</p>
 			</div>
 			
 			<div class="FAQ container-fluid">
