--- a/documents.html
+++ b/documents.html
@@ -195,7 +195,7 @@
 	  <p>
 	  <ul>
 	    <li>Applications Due: September 17th @ 11:59PM PST</li>
-	    <li>Applicant InterDOWNLOADs: September 18th – 22nd</li>
+	    <li>Applicant Interviews: September 18th – 22nd</li>
 	    <li>Announcement of Workshop Hosts: October 1st</li>
 	    <li>Outline of Workshop and Description of Workshop Due: October 8th @ 11:59PM PST</li>
 	    <li>First Draft of Literature/Presentation Due: October 15th @ 11:59PM PST</li>
